invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_74.src
.IPPcode24
STRI2INT LF@a int@49